k8s/sqlserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickfood-sqlserver-service
  namespace: quickfood
  labels:
    app: quickfood-sqlserver
spec:
  selector:
    app: quickfood-sqlserver
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: ClusterIP
